--- a/isg-init.org
+++ b/isg-init.org
@@ -102,7 +102,8 @@
   (setq package-enable-at-startup nil)
   (setcdr (last package-archives)
           '(("melpa-stable" . "https://stable.melpa.org/packages/")
-            ("melpa" . "https://melpa.org/packages/")))
+            ("melpa" . "https://melpa.org/packages/")
+            ("org" . "https://orgmode.org/elpa/")))
 
   (package-initialize) ; most of this section's time is spent here
   (setq package-check-signature nil)
