--- a/isg-init.org
+++ b/isg-init.org
@@ -794,23 +794,31 @@
    https://commercialhaskell.github.io/intero/
    https://github.com/commercialhaskell/intero
 
-  | key         | command                                        |
-  |-------------+------------------------------------------------|
-  | C-c C-l     | load this module in the REPL                   |
-  |             |                                                |
-  | M-.         | jump to definition                             |
-  | C-c C-i     | show information of identifier at point        |
-  | C-c C-t     | display type of identifier at point            |
-  | C-c C-r     | automatically apply suggestions                |
-  | C-u C-c C-t | insert a type signature for the thing at point |
-  |             |                                                |
-  | C-c C-c     | evaluate the selected region in the REPL       |
-  | C-c C-k     | clear REPL                                     |
-  | C-c C-z     | switch to and from the REPL                    |
-  |             |                                                |
-  | C-c ! l     | see a list of errors                           |
-  | C-c ! n     | jump to next error                             |
-  | C-c ! p     | jump to previous error                         |
+   formatting requires the hindent binary to be installed:
+   https://github.com/commercialhaskell/hindent.git
+
+| section    | key         | command                                        |
+|------------+-------------+------------------------------------------------|
+|            | C-c C-l     | load this module in the REPL                   |
+|            |             |                                                |
+|            | M-.         | jump to definition                             |
+|            | C-c C-i     | show information of identifier at point        |
+|            | C-c C-t     | display type of identifier at point            |
+|            | C-c C-r     | automatically apply suggestions                |
+|            | C-u C-c C-t | insert a type signature for the thing at point |
+|            |             |                                                |
+|            | C-c C-c     | evaluate the selected region in the REPL       |
+|            | C-c C-k     | clear REPL                                     |
+|            | C-c C-z     | switch to and from the REPL                    |
+|            |             |                                                |
+|            | C-c ! l     | see a list of errors                           |
+|            | C-c ! n     | jump to next error                             |
+|            | C-c ! p     | jump to previous error                         |
+|            |             |                                                |
+| formatting | C-M-\       | format selected region                         |
+|            | M-q         | format current expression                      |
+
+
 
 #+BEGIN_SRC emacs-lisp
   (defun isg/haskell-config ()
@@ -826,7 +834,12 @@
   (use-package haskell-mode
     :mode "\\.hs\\'"
     :init
-    (add-hook 'haskell-mode-hook 'isg/haskell-config))
+    (use-package hindent :defer t)
+    ;; (require 'hindent)
+    (add-hook 'haskell-mode-hook 'isg/haskell-config)
+    (add-hook 'haskell-mode-hook #'hindent-mode)
+    :config
+    (setq hindent-reformat-buffer-on-save t))
 #+END_SRC
 
 
